# SMS_Alert_Sim

./: README.md
sms_backend/: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml  run_tests.sh
sms_backend/entity/: Cargo.toml
sms_backend/entity/src/: alert.rs  lib.rs  mod.rs  prelude.rs  user.rs
sms_backend/migration/: Cargo.toml
sms_backend/migration/src/: lib.rs  m20230101_create_user.rs  m20230102_create_alert.rs
sms_backend/src/: lib.rs  main.rs
sms_backend/src/handlers/: alert_handler.rs  historical_handler.rs  mod.rs  progress_handler.rs  system_handler.rs
sms_backend/src/models/: alert_models.rs  mod.rs  progress_models.rs
sms_backend/src/routes/: alert_routes.rs  historical_routes.rs  mod.rs  progress_monitor_routes.rs  system_routes.rs
sms_backend/src/services/: alert_services.rs  histroical_services.rs  mod.rs  progress_services.rs
sms_backend/src/structures/: mod.rs  producer.rs  progress_monitor.rs  sender.rs  sender_service.rs
sms_backend/src/utils/: mod.rs
sms_backend/src/utils/db_utils/: db_error_utils.rs  mod.rs  seed_utils.rs
sms_backend/src/utils/sms_utils/: error_utils.rs  mod.rs  rand_utils.rs  sender_utils.rs
sms_backend/tests/: test_utils.rs  tests_alert_services.rs  tests_error_utils.rs  tests_historical_services.rs  tests_producer.rs  tests_progress_monitor.rs  tests_progress_services.rs  tests_rand_utils.rs  tests_seed_utils.rs  tests_sender_service.rs  tests_sender_utils.rs  tests_senders.rs
sms_frontend/: README.md  angular.json  package-lock.json  package.json  tsconfig.json
(+65 files in other folders)
