[workspace]
members = [
    ".",
    "entity",
    "migration",
]

[package]
name = "sms_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# SeaORM stuff
entity = { path = "entity" }
migration = { path = "migration" }
sea-orm = { version = "1.1.3", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = "1.1.3"

# axum
axum = { version = "0.7.9", features = ["multipart", "macros"] }
axum-macros = "0.4.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = { version = "0.4.13", features = ["timeout"] }
tower-http = { version = "0.5.2", features = ["cors", "trace"] }

# async 
tokio = { version = "1.32", features = ["rt-multi-thread", "macros", "full"] }
async-trait = "0.1"
tokio-util = { version = "0.7.11", features = ["full"] }
futures = "0.3"
serial_test = "3.2.0"

# random (literally some of them)
rand = "0.8.5"
rand_distr = "0.4.3"
uuid = { version = "1", features = ["v4"] }
dotenvy = "0.15"
thiserror = "1.0"
tracing = "0.1.40"
tracing-subscriber = "0.3"

